# miniRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.ko.md  README.md  check_parse.c  easy.rt  example.rt  main.c  miniRT  result
.github/workflows/: make.yml  norm.yml
includes/: mlx_utils.h  parse.h  print.h  rt_keybind.h  rt_minirt.h  rt_parse.h  rt_scene.h  rt_struct.h  rt_trace.h  rt_utils.h  rt_utils_color.h  rt_utils_vector.h  rt_vec_utils.h  scene.h  structures.h  trace.h  utils.h
keybind/: rt_identify_keycode.c  rt_keybind.c
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_d.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_l_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_p.c  ft_printf.c  ft_put_str_char.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_s.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  (+16 more)
parse/: a.out  check_parse.c  rt_atod.c  rt_file_format.c  rt_file_validate.c  rt_parse_vector.c  rt_set_vector.c  rt_strtod.c
raytrace/: a.out  canvas.c  hit_sphere.c  main.c  object_create.c  print.h  ray.c  scene.c  scene.h  structures.h  trace.h  utils.h  write_color.c
raytrace_in_week/: a.out  main.c
scene/: rt_scene.c
src/: dmatrix.c  dmatrix2.c  dmatrix3.c  dmatrix4.c  dvec.c  dvec2.c  main.c  mini_rt.h  rt_err_msg.c  rt_file_validate.c  rt_free_utils.c  rt_min_vec.c  rt_minirt.h  rt_mlx.c  rt_parse.h  rt_set_vector.c  rt_strtod.c  rt_struct.h  rt_utils.h  rt_vec_calculate.c  rt_vec_init.c  rt_vec_length.c  rt_vec_multiply_divide.c  rt_vec_plus_minus.c  rt_vec_utils.h  view.c  view2.c
src/mlx_utils/: mlx_display_info.c  mlx_drawing.c  mlx_key_binding.c  mlx_key_binding2.c  mlx_key_binding3.c  mlx_obj_info.c  my_mlx_pixel_put.c
src/parse/: file_fmt.c  file_validate.c  file_validate2.c  file_validate3.c  parse_each_line.c  parse_obj.c  parse_obj2.c  parse_rt.c  parse_vec.c  parse_vec2.c  rt_file_format.c  rt_file_validate.c  rt_parse_vector.c
src/print/: print.c
src/scene/: canvas.c  obj_create.c  object_create.c  scene.c
src/trace/hit/: gpt_cylinder.c  hit.c  hit_cylinder.c  hit_cylinder2.c  hit_cylinder3.c  hit_cylinder4.c  hit_plane.c  hit_sphere.c  new_cylinder.c  normal.c
src/trace/ray/: phong_lighting.c  ray.c
src/utils/: err_msg.c  ft_convert.c  ft_dtostr.c  ft_free.c  ft_str.c  ft_strcmp.c  ft_strtod.c  ft_tab_to_space.c  obj_utils.c  object_utils.c  vec_utils.c  vec_utils2.c  vec_utils3.c  vec_utils4.c
trace/: rt_hit_sphere.c  rt_phong_light.c  rt_ray.c
utils/: rt_err_msg.c  rt_free_utils.c  rt_strcmp.c  rt_tab_to_space.c  vec_utils.c
utils_color/: rt_color_add_sum.c  rt_color_calculate.c  rt_color_init.c  rt_color_len.c  rt_color_min.c  rt_color_mult_div.c  rt_color_set.c  rt_vtoc.c
utils_vector/: rt_vec_calculate.c  rt_vec_init.c  rt_vec_set.c
vector_utils/: rt_min_vec.c  rt_set_vec.c  rt_vec_plus_minus.c
