project(libft)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-Wall -Wextra -Werror -g")
set(SOURCE_FILES
        ft_isalpha.c 
        ft_isascii.c
        ft_isdigit.c
        ft_isprint.c
        ft_strlen.c
        ft_bzero.c
        ft_isalnum.c
        ft_memcpy.c
        ft_memmove.c
        ft_memset.c
        ft_strlcpy.c
        ft_strlcat.c
        ft_toupper.c
        ft_tolower.c
        ft_strchr.c
        ft_strrchr.c
        ft_strncmp.c
        ft_memchr.c
        ft_memcmp.c
        ft_strnstr.c
        ft_atoi.c
        ft_calloc.c
        ft_strdup.c
        ft_substr.c
        ft_strjoin.c
        ft_strtrim.c
        ft_split.c
        ft_itoa.c
        ft_strmapi.c
        ft_striteri.c
        ft_putchar_fd.c
        ft_putstr_fd.c
        ft_putendl_fd.c
        ft_putnbr_fd.c
        ft_printf.c
        ft_s.c
        ft_p.c
        ft_d.c
        ft_u.c
        ft_x.c
        ft_put_str_char.c
        ft_l_itoa.c
        get_next_line.c
        get_next_line_utils.c
        ft_lstnew_bonus.c
        ft_lstadd_front_bonus.c
        ft_lstsize_bonus.c
        ft_lstlast_bonus.c
        ft_lstadd_back_bonus.c
        ft_lstdelone_bonus.c
        ft_lstclear_bonus.c
        ft_lstiter_bonus.c
        ft_lstmap_bonus.c
)
add_library(libft ${SOURCE_FILES})
